<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="30dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/boarder_line">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_marginStart="10dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:fontFamily="@font/bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:fontFamily="@font/bold"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etRegEmail"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etRegUserName"
                    android:inputType="text"
                    android:hint="@string/user_name"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etRegPass1"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etRegPass2"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/btnCreateAc"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/round"
                android:background="@drawable/button_back"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:fontFamily="@font/round"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnToLog"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:fontFamily="@font/round"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"/>












        </LinearLayout>








    </androidx.cardview.widget.CardView>



</ScrollView>