<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:elevation="50dp"
    app:cardCornerRadius="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="15dp"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder_line">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="69dp"
            android:id="@+id/recImage"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:id="@+id/recTopic"
            android:text="@string/topic"
            android:fontFamily="@font/heads"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/recImage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/recDate"
            android:text="@string/date"
            android:layout_toEndOf="@id/recTopic"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/heads"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>


        <TextView
            android:layout_width="140dp"
            android:layout_height="18dp"
            android:id="@+id/recDesc"
            android:text="@string/description"
            android:layout_toEndOf="@id/recImage"
            android:fontFamily="@font/heads"
            android:layout_below="@id/recTopic"
            android:layout_marginStart="20dp"
            android:maxLines="0"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>