<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detTopic"
        android:text="@string/topic"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/round"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:id="@+id/card"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        android:layout_below="@id/detTopic"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:id="@+id/detImage"
            android:src="@mipmap/ic_launcher"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detDate"
        android:text="@string/see_date"
        android:layout_below="@id/card"
        android:fontFamily="@font/round"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detDescription"
        android:layout_below="@id/detDate"
        android:text="@string/description"
        android:fontFamily="@font/round"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        app:cardCornerRadius="30dp"
        android:elevation="50dp"
        android:layout_gravity="bottom">


        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:id="@+id/btnDelete"
            android:padding="2dp"
            android:src="@drawable/trash"/>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="30dp"
        android:elevation="50dp">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:id="@+id/btnEdit"
        android:padding="2dp"
        android:src="@drawable/pen"/>

    </androidx.cardview.widget.CardView>




</RelativeLayout>